--- a/ch16-01-threads.html
+++ b/ch16-01-threads.html
@@ -171,14 +171,14 @@
 <p>在大部分的現代作業系統中，被執行的程式碼會在<em>程序（process）<em>中執行，作業系統會負責同時處理數個程序。在你的程式中，你也可以將各自獨立的部分同時執行。執行這些獨立部分的功能就叫做</em>執行緒（threads）</em>。</p>
 <p>將程式中的運算拆成數個執行緒可以提升效能，因爲程式能同時執行多項任務，不過這也同時增加了複雜度。因爲執行緒可以同時執行，所以無法保證不同執行緒的程式碼執行的順序。這會導致以下問題：</p>
 <ul>
-<li>競爭條件（Race conditions）：數個執行緒已不一致的順序取得資料或資源</li>
+<li>競爭條件（Race conditions）：數個執行緒以不一致的順序取得資料或資源</li>
 <li>死結（Deadlocks）：兩個執行緒彼此都在等待對方停止使用它們所需的資源，因而讓執行緒無法繼續執行</li>
 <li>只在特定情形會發生的程式錯誤，並難以重現與穩定修復</li>
 </ul>
 <p>Rust 嘗試降低使用執行緒所帶來的負面效果，不過對於多執行緒程式設計還是得格外小心，其所要求的程式結構也與單一執行緒的程式有所不同。</p>
 <p>不同程式語言會以不同的方式實作執行緒。許多作業系統都有提供 API 來建立新的執行緒。這樣讓一個語言呼叫作業系統 APIs 來建立執行緒的方式有時會稱爲 <em>1:1</em>，代表每一個語言產生的執行緒就是一個作業系統的執行緒。</p>
-<p>而有許多程式語言會提供它們自己的特殊執行緒實作。程式語言提供的執行緒被稱爲*綠色（green）*執行緒，而使用綠色執行緒的語言底層會執行數個作業系統執行緒。因此綠色執行緒的模型會被稱爲 <em>M:N</em>：每 <code>M</code> 個綠色執行緒會有 <code>N</code> 作業系統執行緒，<code>M</code> 和 <code>N</code> 的數量可能會不相同。</p>
-<p>每種模型都有它的優勢與取捨，而對 Rust 來說最重要的取捨就是執行時支援。*執行時（Runtime）*是個令人困惑的術語且在不同場合會帶有不同意義。</p>
+<p>而有許多程式語言會提供它們自己的特殊執行緒實作。程式語言提供的執行緒被稱爲<em>綠色執行緒（green thread）</em> ，而使用綠色執行緒的語言底層會執行數個作業系統執行緒。因此綠色執行緒的模型會被稱爲 <em>M:N</em>：每 <code>M</code> 個綠色執行緒會有 <code>N</code> 作業系統執行緒，<code>M</code> 和 <code>N</code> 的數量可能會不相同。</p>
+<p>每種模型都有它的優勢與取捨，而對 Rust 來說最重要的取捨就是執行時支援。<em>執行時（Runtime）</em> 是個令人困惑的術語且在不同場合會帶有不同意義。</p>
 <p>在這裡我們指的<em>執行時</em>是每個二進制檔案中語言所提供的程式碼。此程式碼根據不同語言可大可小，但每個非組合語言的語言都一定會有一些執行時程式碼。所以說當人們常說一個語言「沒有執行時」的話，他們常常指的是「小執行時」。較小的執行時提供的功能就較少，但優勢在於可以產生較小的二進制檔案，這能使得與其他語言結合更加容易。雖然許多語言都能接受增加執行時的大小來換取更多功能，但 Rust 需要做到幾乎沒有執行時，且必須能夠呼叫 C 來維持效能，這也是不能妥協的。</p>
 <p>綠色執行緒 M:N 模組需要更大的語言執行時來管理執行緒。因此 Rust 標準函式庫只提供了 1:1 執行緒的實作。因爲 Rust 屬於低階語言。如果你寧願花費一些開銷以換取像是更容易地控制執行緒於何時執行，或者能降低環境切換成本等功能的話，你可以尋找有實作 M:N 執行緒的 crate。</p>
 <p>現在我們已經定義了 Rust 中的執行緒，讓我們來探討如何使用標準函式庫提供的執行緒 API 吧。</p>
@@ -191,13 +191,13 @@ use std::time::Duration;
 fn main() {
     thread::spawn(|| {
         for i in 1..10 {
-            println!(&quot;hi number {} from the spawned thread!&quot;, i);
+            println!(&quot;數字 {} 出現在產生的執行緒中！&quot;, i);
             thread::sleep(Duration::from_millis(1));
         }
     });
 
     for i in 1..5 {
-        println!(&quot;hi number {} from the main thread!&quot;, i);
+        println!(&quot;數字 {} 出現在主執行緒中！&quot;, i);
         thread::sleep(Duration::from_millis(1));
     }
 }
@@ -207,15 +207,15 @@ fn main() {
 <!-- Not extracting output because changes to this output aren't significant;
 the changes are likely to be due to the threads running differently rather than
 changes in the compiler -->
-<pre><code class="language-text">hi number 1 from the main thread!
-hi number 1 from the spawned thread!
-hi number 2 from the main thread!
-hi number 2 from the spawned thread!
-hi number 3 from the main thread!
-hi number 3 from the spawned thread!
-hi number 4 from the main thread!
-hi number 4 from the spawned thread!
-hi number 5 from the spawned thread!
+<pre><code class="language-text">數字 1 出現在主執行緒中！
+數字 1 出現在產生的執行緒中！
+數字 2 出現在主執行緒中！
+數字 2 出現在產生的執行緒中！
+數字 3 出現在主執行緒中！
+數字 3 出現在產生的執行緒中！
+數字 4 出現在主執行緒中！
+數字 4 出現在產生的執行緒中！
+數字 5 出現在產生的執行緒中！
 </code></pre>
 <p><code>thread::sleep</code> 的呼叫強制執行緒短時間內停止運作，讓不同的執行緒可以執行。執行緒可能會輪流執行，但並不保證絕對如此，這會依據你的作業系統如何安排執行緒而有所不同。在這一輪中，主執行緒會先顯示，就算程式中是先寫新執行緒的 <code>println!</code> 陳述式。而且雖然我們是寫說新執行緒印出 <code>i</code> 一直到 9，但它在主執行緒結束前只印到 5。</p>
 <p>如果當你執行此程式時只看到主執行緒的結果，或者沒有看到任何交錯的話，你可以嘗試增加數字範圍來增加作業系統切換執行緒的機會。</p>
@@ -229,13 +229,13 @@ use std::time::Duration;
 fn main() {
     let handle = thread::spawn(|| {
         for i in 1..10 {
-            println!(&quot;hi number {} from the spawned thread!&quot;, i);
+            println!(&quot;數字 {} 出現在產生的執行緒中！&quot;, i);
             thread::sleep(Duration::from_millis(1));
         }
     });
 
     for i in 1..5 {
-        println!(&quot;hi number {} from the main thread!&quot;, i);
+        println!(&quot;數字 {} 出現在主執行緒中！&quot;, i);
         thread::sleep(Duration::from_millis(1));
     }
 
@@ -243,23 +243,23 @@ fn main() {
 }
 </code></pre></pre>
 <p><span class="caption">範例 16-2：從 <code>thread::spawn</code> 儲存 <code>JoinHandle</code> 以保障執行緒能執行完成</span></p>
-<p>對其呼叫 <code>join</code> 會阻擋當前正在執行的執行緒中直到 <code>JoinHandle</code> 的執行緒結束爲止。*阻擋（Blocking）*一條執行緒代表該執行緒不會繼續運作或離開。因爲我們在主執行緒的 <code>for</code> 迴圈之後加上了 <code>join</code> 的呼叫，範例 16-2 應該會產生類似以下的輸出：</p>
+<p>對其呼叫 <code>join</code> 會阻擋當前正在執行的執行緒中直到 <code>JoinHandle</code> 的執行緒結束爲止。<em>阻擋（Blocking）</em> 一條執行緒代表該執行緒不會繼續運作或離開。因爲我們在主執行緒的 <code>for</code> 迴圈之後加上了 <code>join</code> 的呼叫，範例 16-2 應該會產生類似以下的輸出：</p>
 <!-- Not extracting output because changes to this output aren't significant;
 the changes are likely to be due to the threads running differently rather than
 changes in the compiler -->
-<pre><code class="language-text">hi number 1 from the main thread!
-hi number 2 from the main thread!
-hi number 1 from the spawned thread!
-hi number 3 from the main thread!
-hi number 2 from the spawned thread!
-hi number 4 from the main thread!
-hi number 3 from the spawned thread!
-hi number 4 from the spawned thread!
-hi number 5 from the spawned thread!
-hi number 6 from the spawned thread!
-hi number 7 from the spawned thread!
-hi number 8 from the spawned thread!
-hi number 9 from the spawned thread!
+<pre><code class="language-text">數字 1 出現在主執行緒中！
+數字 2 出現在主執行緒中！
+數字 1 出現在產生的執行緒中！
+數字 3 出現在主執行緒中！
+數字 2 出現在產生的執行緒中！
+數字 4 出現在主執行緒中！
+數字 3 出現在產生的執行緒中！
+數字 4 出現在產生的執行緒中！
+數字 5 出現在產生的執行緒中！
+數字 6 出現在產生的執行緒中！
+數字 7 出現在產生的執行緒中！
+數字 8 出現在產生的執行緒中！
+數字 9 出現在產生的執行緒中！
 </code></pre>
 <p>兩條執行緒會互相交錯，但是主執行緒這次會因爲 <code>handle.join()</code> 而等待，直到產生的執行緒完成前都不會結束。</p>
 <p>那如果我們如以下這樣將 <code>handle.join()</code> 移到 <code>main</code> 中的 <code>for</code> 迴圈前會發生什麼事呢：</p>
@@ -270,7 +270,7 @@ use std::time::Duration;
 fn main() {
     let handle = thread::spawn(|| {
         for i in 1..10 {
-            println!(&quot;hi number {} from the spawned thread!&quot;, i);
+            println!(&quot;數字 {} 出現在產生的執行緒中！&quot;, i);
             thread::sleep(Duration::from_millis(1));
         }
     });
@@ -278,7 +278,7 @@ fn main() {
     handle.join().unwrap();
 
     for i in 1..5 {
-        println!(&quot;hi number {} from the main thread!&quot;, i);
+        println!(&quot;數字 {} 出現在主執行緒中！&quot;, i);
         thread::sleep(Duration::from_millis(1));
     }
 }
@@ -287,19 +287,19 @@ fn main() {
 <!-- Not extracting output because changes to this output aren't significant;
 the changes are likely to be due to the threads running differently rather than
 changes in the compiler -->
-<pre><code class="language-text">hi number 1 from the spawned thread!
-hi number 2 from the spawned thread!
-hi number 3 from the spawned thread!
-hi number 4 from the spawned thread!
-hi number 5 from the spawned thread!
-hi number 6 from the spawned thread!
-hi number 7 from the spawned thread!
-hi number 8 from the spawned thread!
-hi number 9 from the spawned thread!
-hi number 1 from the main thread!
-hi number 2 from the main thread!
-hi number 3 from the main thread!
-hi number 4 from the main thread!
+<pre><code class="language-text">數字 1 出現在產生的執行緒中！
+數字 2 出現在產生的執行緒中！
+數字 3 出現在產生的執行緒中！
+數字 4 出現在產生的執行緒中！
+數字 5 出現在產生的執行緒中！
+數字 6 出現在產生的執行緒中！
+數字 7 出現在產生的執行緒中！
+數字 8 出現在產生的執行緒中！
+數字 9 出現在產生的執行緒中！
+數字 1 出現在主執行緒中！
+數字 2 出現在主執行緒中！
+數字 3 出現在主執行緒中！
+數字 4 出現在主執行緒中！
 </code></pre>
 <p>像這樣將 <code>join</code> 呼叫置於何處的小細節，會影響你的執行緒會不會同時運行。</p>
 <h3><a class="header" href="#透過執行緒使用-move-閉包" id="透過執行緒使用-move-閉包">透過執行緒使用 <code>move</code> 閉包</a></h3>
@@ -313,7 +313,7 @@ fn main() {
     let v = vec![1, 2, 3];
 
     let handle = thread::spawn(|| {
-        println!(&quot;Here's a向量: {:?}&quot;, v);
+        println!(&quot;這是個向量：{:?}&quot;, v);
     });
 
     handle.join().unwrap();
@@ -328,7 +328,7 @@ error[E0373]: closure may outlive the current function, but it borrows `v`, whic
   |
 6 |     let handle = thread::spawn(|| {
   |                                ^^ may outlive borrowed value `v`
-7 |         println!(&quot;Here's a向量: {:?}&quot;, v);
+7 |         println!(&quot;這是個向量：{:?}&quot;, v);
   |                                           - `v` is borrowed here
   |
 note: function requires argument type to outlive `'static`
@@ -336,7 +336,7 @@ note: function requires argument type to outlive `'static`
   |
 6 |       let handle = thread::spawn(|| {
   |  __________________^
-7 | |         println!(&quot;Here's a向量: {:?}&quot;, v);
+7 | |         println!(&quot;這是個向量：{:?}&quot;, v);
 8 | |     });
   | |______^
 help: to force the closure to take ownership of `v` (and any other referenced variables), use the `move` keyword
@@ -360,10 +360,10 @@ fn main() {
     let v = vec![1, 2, 3];
 
     let handle = thread::spawn(|| {
-        println!(&quot;Here's a向量: {:?}&quot;, v);
+        println!(&quot;這是個向量：{:?}&quot;, v);
     });
 
-    drop(v); // oh no!
+    drop(v); // 喔不！
 
     handle.join().unwrap();
 }
@@ -387,7 +387,7 @@ fn main() {
     let v = vec![1, 2, 3];
 
     let handle = thread::spawn(move || {
-        println!(&quot;Here's a向量: {:?}&quot;, v);
+        println!(&quot;這是個向量：{:?}&quot;, v);
     });
 
     handle.join().unwrap();
@@ -405,10 +405,10 @@ error[E0382]: use of moved value: `v`
 5  | 
 6  |     let handle = thread::spawn(move || {
    |                                ------- value moved into closure here
-7  |         println!(&quot;Here's a向量: {:?}&quot;, v);
+7  |         println!(&quot;這是個向量：{:?}&quot;, v);
    |                                           - variable moved due to use in closure
 ...
-10 |     drop(v); // oh no!
+10 |     drop(v); // 喔不！
    |          ^ value used here after move
 
 error: aborting due to previous error
@@ -418,7 +418,7 @@ error: could not compile `threads`.
 
 To learn more, run the command again with --verbose.
 </code></pre>
-<p>Rust 的所有權規則再次整救了我們！我們在範例 16-3 會得到錯誤是因爲 Rust 是保守的所以只會爲執行緒借用 <code>v</code>，這代表主執行緒理論上可能會使產生的執行緒的引用無效化。透過告訴 Rust 將 <code>v</code> 的所有權移入產生的執行緒中，我們向 Rust 保證不會在主執行緒用到 <code>v</code>。如果我們用相同方式修改範例 16-4 的話，當我們嘗試在主執行緒使用 <code>v</code> 的話，我們就違反了所有權規則。<code>move</code> 關鍵字會覆蓋 Rust 保守的預設借用行爲，且也不允許我們違反所有權規則。</p>
+<p>Rust 的所有權規則再次拯救了我們！我們在範例 16-3 會得到錯誤是因爲 Rust 是保守的，所以只會爲執行緒借用 <code>v</code>，這代表主執行緒理論上可能會使產生的執行緒的引用無效化。透過告訴 Rust 將 <code>v</code> 的所有權移入產生的執行緒中，我們向 Rust 保證不會在主執行緒用到 <code>v</code>。如果我們用相同方式修改範例 16-4 的話，當我們嘗試在主執行緒使用 <code>v</code> 的話，我們就違反了所有權規則。<code>move</code> 關鍵字會覆蓋 Rust 保守的預設借用行爲，且也不允許我們違反所有權規則。</p>
 <p>有了對執行緒與執行緒 API 的基本瞭解，讓我們看看我們可以透過執行緒<em>做些</em>什麼。</p>
 <blockquote>
 <ul>
