--- a/ch17-02-trait-objects.html
+++ b/ch17-02-trait-objects.html
@@ -171,9 +171,9 @@
 <p>在第八章中，我們提及向量其中一項限制是它儲存的元素只能有一種型別。我們在範例 8-10 提出一個替代方案，那就是我們定義 <code>SpreadsheetCell</code> 枚舉且其變體能存有整數、浮點數與文字。這讓我們可以對每個元素儲存不同的型別，且向量仍能代表元素的集合。當我們的可變換的項目有固定的型別集合，而且我們在編譯程式碼時就知道的話，這的確是完美的解決方案。</p>
 <p>然而，有時我們會希望函式庫的使用者能夠在特定的情形下擴展型別的集合。爲了展示我們如何達成，我們來建立個圖形使用者介面（graphical user interface, GUI）工具範例來遍歷一個項目列表，呼叫其內每個項目的 <code>draw</code> 方法將其顯示在螢幕上，這是 GUI 工具常見的技巧。我們會建立個函式庫 crate 叫做 <code>gui</code>，這會包含 GUI 函式庫的結構體。此 crate 可能會包含一些人們會使用到的型別，像是 <code>Button</code> 或 <code>TextField</code>。除此之外，<code>gui</code> 使用者也能夠建立他們自己的型別來顯示出來。舉例來說，有些開發者可以加上 <code>Image</code> 而其他人可能會加上 <code>SelectBox</code>。</p>
 <p>我們在此例中不會實作出整個 GUI 函式庫，但會展示各個元件是怎麼組合起來的。在寫函式庫時，我們無法知道並定義開發者想建立出來的所有型別。但我們知道 <code>gui</code> 需要追蹤許多不同型別的數值，且它需要能夠對這些不同的型別數值呼叫 <code>draw</code> 方法。它不需要知道當我們呼叫 <code>draw</code> 方法時實際發生了什麼事，只需要知道該數值有我們可以呼叫的方法。</p>
-<p>在有具盛得語言中，我們可能會定義一個類型（class）叫做 <code>Component</code> 且其有個方法叫做 <code>draw</code>。其他的類型像是 <code>Button</code>、<code>Image</code> 和 <code>SelectBox</code> 等等，可以繼承 <code>Component</code> 以取得 <code>draw</code> 方法。它們可以覆寫 <code>draw</code> 方法來定義它們自己的自訂行爲，但是整個框架能將所有型別視爲像是 <code>Component</code> 實例來對待，並對它們呼叫 <code>draw</code>。但由於 Rust 並沒有繼承，我們需要其他方式來組織 <code>gui</code> 函式庫，好讓使用者可以透過新的型別來擴展它。</p>
+<p>在有繼承的語言中，我們可能會定義一個類型（class）叫做 <code>Component</code> 且其有個方法叫做 <code>draw</code>。其他的類型像是 <code>Button</code>、<code>Image</code> 和 <code>SelectBox</code> 等等，可以繼承 <code>Component</code> 以取得 <code>draw</code> 方法。它們可以覆寫 <code>draw</code> 方法來定義它們自己的自訂行爲，但是整個框架能將所有型別視爲像是 <code>Component</code> 實例來對待，並對它們呼叫 <code>draw</code>。但由於 Rust 並沒有繼承，我們需要其他方式來組織 <code>gui</code> 函式庫，好讓使用者可以透過新的型別來擴展它。</p>
 <h3><a class="header" href="#定義共同行爲的特徵" id="定義共同行爲的特徵">定義共同行爲的特徵</a></h3>
-<p>要定義我們希望 <code>gui</code> 能擁有的行爲，我們定義一個特徵叫做 <code>Draw</code> 並有個方法叫做 <code>draw</code>。然後我們可以定義一個接收*特徵物件（trait object）*的向量。一個特徵物件會指向有實作指定特徵的型別以及一個在執行時尋找該型別方法的尋找表（look up table）。要建立特徵物件，我們指定一些指標，像是引用 <code>&amp;</code> 或者智慧指標 <code>Box&lt;T&gt;</code>，然後加上 <code>dyn</code> 關鍵字與指定的相關特徵。（我們會在第十九章的<a href="ch19-04-advanced-types.html#%E5%8B%95%E6%85%8B%E5%A4%A7%E5%B0%8F%E5%9E%8B%E5%88%A5%E8%88%87-sized-%E7%89%B9%E5%BE%B5">「動態大小型別與 <code>Sized</code> 特徵」</a><!-- ignore -->段落討論特徵物件必須使用指標的原因）我們可以對泛型或實際型別使用特徵物件。當我們使用特徵物件時，Rust 的型別系統會確保在編譯時該段落使用到的任何數值都有實作特徵物件的特徵。於是我們就不必在編譯時知道所有可能的型別。</p>
+<p>要定義我們希望 <code>gui</code> 能擁有的行爲，我們定義一個特徵叫做 <code>Draw</code> 並有個方法叫做 <code>draw</code>。然後我們可以定義一個接收<em>特徵物件（trait object）</em> 的向量。一個特徵物件會指向有實作指定特徵的型別以及一個在執行時尋找該型別方法的尋找表（look up table）。要建立特徵物件，我們指定一些指標，像是引用 <code>&amp;</code> 或者智慧指標 <code>Box&lt;T&gt;</code>，然後加上 <code>dyn</code> 關鍵字與指定的相關特徵。（我們會在第十九章的<a href="ch19-04-advanced-types.html#%E5%8B%95%E6%85%8B%E5%A4%A7%E5%B0%8F%E5%9E%8B%E5%88%A5%E8%88%87-sized-%E7%89%B9%E5%BE%B5">「動態大小型別與 <code>Sized</code> 特徵」</a><!-- ignore -->段落討論特徵物件必須使用指標的原因）我們可以對泛型或實際型別使用特徵物件。當我們使用特徵物件時，Rust 的型別系統會確保在編譯時該段落使用到的任何數值都有實作特徵物件的特徵。於是我們就不必在編譯時知道所有可能的型別。</p>
 <p>我們提到在 Rust 中，我們避免將結構體和枚舉稱爲「物件」，來與其他語言的物件做區別。在結構體或枚舉中，結構你欄位中的資料與 <code>impl</code> 區塊的行爲是分開來的。在其他語言中，資料與行爲會組合成一個概念，也就是所謂的物件。然而特徵物件才比較像是其他語言中的物件，因爲這才會將資料與行爲組合起來。但特徵物件與傳統物件不同的地方在於，我們無法向特徵物件新增資料。特徵物件不像其他語言的物件那麼通用，它們是特別用於對共同行爲產生的抽象概念。</p>
 <p>範例 17-3 定義了一個特徵叫做 <code>Draw</code> 以及一個方法叫做 <code>draw</code>：</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
@@ -279,7 +279,7 @@ where
 
 impl Draw for Button {
     fn draw(&amp;self) {
-        // code to actually draw a button
+        // 實際畫出按鈕的程式碼
     }
 }
 <span class="boring">
@@ -299,7 +299,7 @@ struct SelectBox {
 
 impl Draw for SelectBox {
     fn draw(&amp;self) {
-        // code to actually draw a select box
+        // 實際畫出選擇框的程式碼
     }
 }
 <span class="boring">
@@ -318,7 +318,7 @@ impl Draw for SelectBox {
 </span><span class="boring">
 </span><span class="boring">impl Draw for SelectBox {
 </span><span class="boring">    fn draw(&amp;self) {
-</span><span class="boring">        // code to actually draw a select box
+</span><span class="boring">        // 實際畫出選擇框的程式碼
 </span><span class="boring">    }
 </span><span class="boring">}
 </span><span class="boring">
@@ -349,7 +349,7 @@ fn main() {
 </code></pre>
 <p><span class="caption">範例 17-9：使用特徵物件來儲存實作相同特徵的不同型別數值</span></p>
 <p>我們在寫函式庫時，我們並不知道有人會想要新增 <code>SelectBox</code> 型別，但我們的 <code>Screen</code> 實作能夠運用新的型別並顯示出來，因爲 <code>SelectBox</code> 有實作 <code>Draw</code> 特徵，這代表它就有實作 <code>draw</code> 方法。</p>
-<p>這種只在意數值回應的訊息而非數值實際型別的概念，類似於動態型別語言中*鴨子型別（duck typing）*的概念。如果它走起來像隻鴨子、叫起來像隻鴨子，那它必定是隻鴨子！在範例 17-5 中 <code>Screen</code> 的 <code>run</code> 實作不需要知道每個元件的實際型別爲何。它不會檢查一個元件是 <code>Button</code> 還是 <code>SelectBox</code> 實例，它只會呼叫元件的 <code>draw</code> 方法。透過指定 <code>Box&lt;dyn Draw&gt;</code> 來作爲 <code>components</code>向量中的數值型別，我們定義 <code>Screen</code> 需要我們能夠呼叫 <code>draw</code> 方法的數值。</p>
+<p>這種只在意數值回應的訊息而非數值實際型別的概念，類似於動態型別語言中<em>鴨子型別（duck typing）</em> 的概念。如果它走起來像隻鴨子、叫起來像隻鴨子，那它必定是隻鴨子！在範例 17-5 中 <code>Screen</code> 的 <code>run</code> 實作不需要知道每個元件的實際型別爲何。它不會檢查一個元件是 <code>Button</code> 還是 <code>SelectBox</code> 實例，它只會呼叫元件的 <code>draw</code> 方法。透過指定 <code>Box&lt;dyn Draw&gt;</code> 來作爲 <code>components</code>向量中的數值型別，我們定義 <code>Screen</code> 需要我們能夠呼叫 <code>draw</code> 方法的數值。</p>
 <p>我們使用特徵物件與 Rust 型別系統能寫出類似鴨子型別的程式碼，這樣的優勢在於我們在執行時永遠不必檢查一個數值有沒有實作特定方法，或擔心我們會不會呼叫了一個沒有實作該方法的數值而產生錯誤。如果數值沒有實作特徵物件要求的特徵的話，Rust 不會編譯通過我們的程式碼。</p>
 <p>舉例來說，範例 17-10 展示了要是我們嘗試使用 <code>String</code> 作爲元件來建立 <code>Screen</code> 的話會發生什麼事：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
@@ -385,14 +385,14 @@ To learn more, run the command again with --verbose.
 <p>此錯誤讓我們知道要麼我們傳遞了不希望傳給 <code>Screen</code> 的型別所以應該要傳遞其他型別，要麼我們應該要對 <code>String</code> 實作 <code>Draw</code>，這樣 <code>Screen</code> 才能對其呼叫 <code>draw</code>。</p>
 <h3><a class="header" href="#特徵物件執行動態調度" id="特徵物件執行動態調度">特徵物件執行動態調度</a></h3>
 <p>回想一下第十章的<a href="ch10-01-syntax.html#%E4%BD%BF%E7%94%A8%E6%B3%9B%E5%9E%8B%E7%9A%84%E7%A8%8B%E5%BC%8F%E7%A2%BC%E6%95%88%E8%83%BD">「使用泛型的程式碼效能」</a><!-- ignore -->段落我們討論過，當我們對泛型使用閉包時，編譯器會執行單態化（monomorphization）的過程。編譯器會在我們對每個用泛型型別參數取代的實際型別產生非泛型的函式與方法實作。單態化產生程式碼的動作會稱爲「靜態調度（static dispatch）」，這代表編譯器在編譯時知道我們呼叫的方法爲何。與其相反的則是<em>動態調度（dynamic dispatch）</em>，這種方式時編譯器在編譯時無法知道你呼叫的方法爲何。在動態調度的情況下，編譯器會生成在執行時能夠確定會呼叫何種方法的程式碼。</p>
-<p>當我們使用特徵物件時，Rust 必須使用動態調度。編譯器無法知道使用特徵物件的程式碼會使用到的所有型別爲何，所以它會不知道該呼叫哪個型別的哪個實作方法。取而代之的是，Rust 在執行時會使用特徵物件內部的指標來知道該呼叫哪個方法。這樣尋找的動作會產生靜待調度所沒有的執行時開銷。動態調度也讓編譯器無法選擇內聯（inline）方法的程式碼，這樣會因而阻止一些優化。不過我們的確對範例 17-5 的程式碼增加了額外的彈性，並能夠支援範例 17-9，所以這是個權衡取捨。</p>
+<p>當我們使用特徵物件時，Rust 必須使用動態調度。編譯器無法知道使用特徵物件的程式碼會使用到的所有型別爲何，所以它會不知道該呼叫哪個型別的哪個實作方法。取而代之的是，Rust 在執行時會使用特徵物件內部的指標來知道該呼叫哪個方法。這樣尋找的動作會產生靜態調度所沒有的執行時開銷。動態調度也讓編譯器無法選擇內聯（inline）方法的程式碼，這樣會因而阻止一些優化。不過我們的確對範例 17-5 的程式碼增加了額外的彈性，並能夠支援範例 17-9，所以這是個權衡取捨。</p>
 <h3><a class="header" href="#特徵物件要求物件安全" id="特徵物件要求物件安全">特徵物件要求物件安全</a></h3>
-<p>特徵物件只能使用*物件安全（object-safe）*的特徵。Rust 會有一些複雜的規則來檢測其屬性以確保特徵物件安全，不過實際上，我們只需要在意兩條規則。如果特徵定義的所有方法撙守以下屬性的話，該特徵就是物件安全的：</p>
+<p>特徵物件只能使用<em>物件安全（object-safe）</em> 的特徵。Rust 會有一些複雜的規則來檢測其屬性以確保特徵物件安全，不過實際上，我們只需要在意兩條規則。如果特徵定義的所有方法遵守以下屬性的話，該特徵就是物件安全的：</p>
 <ul>
 <li>回傳值不是 <code>Self</code>。</li>
 <li>沒有泛型型別參數。</li>
 </ul>
-<p><code>Self</code> 關鍵字是我們所實作特徵或方法的型別的別名。特徵物件必須是物件安全的，因爲一旦你使用特徵物件後，Rust 就無法知道實作該特徵的型別爲何。如果特徵方法回傳實際 <code>Self</code> 型別，但特徵物件忘記 <code>Self</code> 的確切型別的話，, 該方法不可能有辦法使用原本的實際型別。同理對於泛型型別參數來說，當特徵被使用到時，其就會填入實際的型別參數，實際型別變成了實作特徵的型別的一部分。當型別被使用的特徵物件遺忘時，就無從得知該填素何種泛型型別參數。</p>
+<p><code>Self</code> 關鍵字是我們所實作特徵或方法的型別的別名。特徵物件必須是物件安全的，因爲一旦你使用特徵物件後，Rust 就無法知道實作該特徵的型別爲何。如果特徵方法回傳實際 <code>Self</code> 型別，但特徵物件忘記 <code>Self</code> 的確切型別的話，該方法不可能有辦法使用原本的實際型別。同理對於泛型型別參數來說，當特徵被使用到時，其就會填入實際的型別參數，實際型別變成了實作特徵的型別的一部分。當型別被使用的特徵物件遺忘時，就無從得知該填素何種泛型型別參數。</p>
 <p>標準函式庫中其中一個不是物件安全的特徵範例是 <code>Clone</code> 特徵。<code>Clone</code> 特徵中的 <code>clone</code> 方法簽名長得像這樣：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
