--- a/print.html
+++ b/print.html
@@ -14881,7 +14881,7 @@ collection</span></p>
 <p>由於我們封裝了 <code>AveragedCollection</code> 結構體的實作細節，我們可以在未來輕鬆變更像是資料結構等內部細節。舉例來說，我們可以用 <code>HashSet&lt;i32&gt;</code> 來替換 <code>list</code> 欄位的 <code>Vec&lt;i32&gt;</code>。只要 <code>add</code>、<code>remove</code> 與 <code>average</code> 的公開方法簽名維持一樣，使用到 <code>AveragedCollection</code> 的程式碼就不需要改變。如果我們讓 <code>list</code> 公開的話，情況可能就不相同了，<code>HashSet&lt;i32&gt;</code> 與 <code>Vec&lt;i32&gt;</code> 有不同的方法來新增和移除項目，所以外部的程式碼如果會直接修改 <code>list</code> 的話，可能會需要做些改變。</p>
 <p>如果封裝是物件導向的必備條件的話，Rust 也符合此條件。對程式碼中不同部分使用 <code>pub</code> 可以封裝實作細節。</p>
 <h3><a class="header" href="#作爲型別系統與程式碼共享來繼承" id="作爲型別系統與程式碼共享來繼承">作爲型別系統與程式碼共享來繼承</a></h3>
-<p>*繼承（Inheritance）*是指一個物件可以繼承其他物件定義的機制，使其可以獲取繼承物件的資料與行爲，不必再定義一次。</p>
+<p><em>繼承（Inheritance）</em> 是指一個物件可以繼承其他物件定義的機制，使其可以獲取繼承物件的資料與行爲，不必再定義一次。</p>
 <p>如果一個語言一定要有繼承才算物件導向語言的話，那麼 Rust 就不是。在定義結構體時我們無法繼承父結構體欄位的方法實作。然而如果你在程式設計時常常用到繼承的話，依據你想使用繼承的原因，Rust 還是有提供其他方案。</p>
 <p>你選擇繼承通常會有兩個主要原因。第一個是想能重複使用程式碼，你可以定義一個型別的特定行爲，然後繼承讓你可以在不同的型別重複使用該實作。爲此你可以使用預設的特徵方法實作來分享 Rust 程式碼，你在範例 10-14 就有看到我們在 <code>Summary</code> 特徵加上的預設 <code>summarize</code> 方法實作。任何有實作 <code>Summary</code> 特徵的型別都不必加上更多程式碼就能有 <code>summarize</code> 可以呼叫。這就類似於父類型（class）實作的方法可以在繼承的子類型擁有該方法實作。我們也可以在實作 <code>Summary</code> 特徵時，覆寫 <code>summarize</code> 方法的預設實作，這就類似於子類型覆寫父類型的方法實作。</p>
 <p>另一個想使用繼承的原因與型別系統有關，讓子類型可以視爲父類型來使用。這也稱爲<em>多型（polymorphism）</em>，代表要是數個物件有共享特定特性的話，你可以在執行時彼此替換使用。</p>
@@ -14903,9 +14903,9 @@ collection</span></p>
 <p>在第八章中，我們提及向量其中一項限制是它儲存的元素只能有一種型別。我們在範例 8-10 提出一個替代方案，那就是我們定義 <code>SpreadsheetCell</code> 枚舉且其變體能存有整數、浮點數與文字。這讓我們可以對每個元素儲存不同的型別，且向量仍能代表元素的集合。當我們的可變換的項目有固定的型別集合，而且我們在編譯程式碼時就知道的話，這的確是完美的解決方案。</p>
 <p>然而，有時我們會希望函式庫的使用者能夠在特定的情形下擴展型別的集合。爲了展示我們如何達成，我們來建立個圖形使用者介面（graphical user interface, GUI）工具範例來遍歷一個項目列表，呼叫其內每個項目的 <code>draw</code> 方法將其顯示在螢幕上，這是 GUI 工具常見的技巧。我們會建立個函式庫 crate 叫做 <code>gui</code>，這會包含 GUI 函式庫的結構體。此 crate 可能會包含一些人們會使用到的型別，像是 <code>Button</code> 或 <code>TextField</code>。除此之外，<code>gui</code> 使用者也能夠建立他們自己的型別來顯示出來。舉例來說，有些開發者可以加上 <code>Image</code> 而其他人可能會加上 <code>SelectBox</code>。</p>
 <p>我們在此例中不會實作出整個 GUI 函式庫，但會展示各個元件是怎麼組合起來的。在寫函式庫時，我們無法知道並定義開發者想建立出來的所有型別。但我們知道 <code>gui</code> 需要追蹤許多不同型別的數值，且它需要能夠對這些不同的型別數值呼叫 <code>draw</code> 方法。它不需要知道當我們呼叫 <code>draw</code> 方法時實際發生了什麼事，只需要知道該數值有我們可以呼叫的方法。</p>
-<p>在有具盛得語言中，我們可能會定義一個類型（class）叫做 <code>Component</code> 且其有個方法叫做 <code>draw</code>。其他的類型像是 <code>Button</code>、<code>Image</code> 和 <code>SelectBox</code> 等等，可以繼承 <code>Component</code> 以取得 <code>draw</code> 方法。它們可以覆寫 <code>draw</code> 方法來定義它們自己的自訂行爲，但是整個框架能將所有型別視爲像是 <code>Component</code> 實例來對待，並對它們呼叫 <code>draw</code>。但由於 Rust 並沒有繼承，我們需要其他方式來組織 <code>gui</code> 函式庫，好讓使用者可以透過新的型別來擴展它。</p>
+<p>在有繼承的語言中，我們可能會定義一個類型（class）叫做 <code>Component</code> 且其有個方法叫做 <code>draw</code>。其他的類型像是 <code>Button</code>、<code>Image</code> 和 <code>SelectBox</code> 等等，可以繼承 <code>Component</code> 以取得 <code>draw</code> 方法。它們可以覆寫 <code>draw</code> 方法來定義它們自己的自訂行爲，但是整個框架能將所有型別視爲像是 <code>Component</code> 實例來對待，並對它們呼叫 <code>draw</code>。但由於 Rust 並沒有繼承，我們需要其他方式來組織 <code>gui</code> 函式庫，好讓使用者可以透過新的型別來擴展它。</p>
 <h3><a class="header" href="#定義共同行爲的特徵" id="定義共同行爲的特徵">定義共同行爲的特徵</a></h3>
-<p>要定義我們希望 <code>gui</code> 能擁有的行爲，我們定義一個特徵叫做 <code>Draw</code> 並有個方法叫做 <code>draw</code>。然後我們可以定義一個接收*特徵物件（trait object）*的向量。一個特徵物件會指向有實作指定特徵的型別以及一個在執行時尋找該型別方法的尋找表（look up table）。要建立特徵物件，我們指定一些指標，像是引用 <code>&amp;</code> 或者智慧指標 <code>Box&lt;T&gt;</code>，然後加上 <code>dyn</code> 關鍵字與指定的相關特徵。（我們會在第十九章的<a href="ch19-04-advanced-types.html#%E5%8B%95%E6%85%8B%E5%A4%A7%E5%B0%8F%E5%9E%8B%E5%88%A5%E8%88%87-sized-%E7%89%B9%E5%BE%B5">「動態大小型別與 <code>Sized</code> 特徵」</a><!-- ignore -->段落討論特徵物件必須使用指標的原因）我們可以對泛型或實際型別使用特徵物件。當我們使用特徵物件時，Rust 的型別系統會確保在編譯時該段落使用到的任何數值都有實作特徵物件的特徵。於是我們就不必在編譯時知道所有可能的型別。</p>
+<p>要定義我們希望 <code>gui</code> 能擁有的行爲，我們定義一個特徵叫做 <code>Draw</code> 並有個方法叫做 <code>draw</code>。然後我們可以定義一個接收<em>特徵物件（trait object）</em> 的向量。一個特徵物件會指向有實作指定特徵的型別以及一個在執行時尋找該型別方法的尋找表（look up table）。要建立特徵物件，我們指定一些指標，像是引用 <code>&amp;</code> 或者智慧指標 <code>Box&lt;T&gt;</code>，然後加上 <code>dyn</code> 關鍵字與指定的相關特徵。（我們會在第十九章的<a href="ch19-04-advanced-types.html#%E5%8B%95%E6%85%8B%E5%A4%A7%E5%B0%8F%E5%9E%8B%E5%88%A5%E8%88%87-sized-%E7%89%B9%E5%BE%B5">「動態大小型別與 <code>Sized</code> 特徵」</a><!-- ignore -->段落討論特徵物件必須使用指標的原因）我們可以對泛型或實際型別使用特徵物件。當我們使用特徵物件時，Rust 的型別系統會確保在編譯時該段落使用到的任何數值都有實作特徵物件的特徵。於是我們就不必在編譯時知道所有可能的型別。</p>
 <p>我們提到在 Rust 中，我們避免將結構體和枚舉稱爲「物件」，來與其他語言的物件做區別。在結構體或枚舉中，結構你欄位中的資料與 <code>impl</code> 區塊的行爲是分開來的。在其他語言中，資料與行爲會組合成一個概念，也就是所謂的物件。然而特徵物件才比較像是其他語言中的物件，因爲這才會將資料與行爲組合起來。但特徵物件與傳統物件不同的地方在於，我們無法向特徵物件新增資料。特徵物件不像其他語言的物件那麼通用，它們是特別用於對共同行爲產生的抽象概念。</p>
 <p>範例 17-3 定義了一個特徵叫做 <code>Draw</code> 以及一個方法叫做 <code>draw</code>：</p>
 <p><span class="filename">檔案名稱：src/lib.rs</span></p>
@@ -15011,7 +15011,7 @@ where
 
 impl Draw for Button {
     fn draw(&amp;self) {
-        // code to actually draw a button
+        // 實際畫出按鈕的程式碼
     }
 }
 <span class="boring">
@@ -15031,7 +15031,7 @@ struct SelectBox {
 
 impl Draw for SelectBox {
     fn draw(&amp;self) {
-        // code to actually draw a select box
+        // 實際畫出選擇框的程式碼
     }
 }
 <span class="boring">
@@ -15050,7 +15050,7 @@ impl Draw for SelectBox {
 </span><span class="boring">
 </span><span class="boring">impl Draw for SelectBox {
 </span><span class="boring">    fn draw(&amp;self) {
-</span><span class="boring">        // code to actually draw a select box
+</span><span class="boring">        // 實際畫出選擇框的程式碼
 </span><span class="boring">    }
 </span><span class="boring">}
 </span><span class="boring">
@@ -15081,7 +15081,7 @@ fn main() {
 </code></pre>
 <p><span class="caption">範例 17-9：使用特徵物件來儲存實作相同特徵的不同型別數值</span></p>
 <p>我們在寫函式庫時，我們並不知道有人會想要新增 <code>SelectBox</code> 型別，但我們的 <code>Screen</code> 實作能夠運用新的型別並顯示出來，因爲 <code>SelectBox</code> 有實作 <code>Draw</code> 特徵，這代表它就有實作 <code>draw</code> 方法。</p>
-<p>這種只在意數值回應的訊息而非數值實際型別的概念，類似於動態型別語言中*鴨子型別（duck typing）*的概念。如果它走起來像隻鴨子、叫起來像隻鴨子，那它必定是隻鴨子！在範例 17-5 中 <code>Screen</code> 的 <code>run</code> 實作不需要知道每個元件的實際型別爲何。它不會檢查一個元件是 <code>Button</code> 還是 <code>SelectBox</code> 實例，它只會呼叫元件的 <code>draw</code> 方法。透過指定 <code>Box&lt;dyn Draw&gt;</code> 來作爲 <code>components</code>向量中的數值型別，我們定義 <code>Screen</code> 需要我們能夠呼叫 <code>draw</code> 方法的數值。</p>
+<p>這種只在意數值回應的訊息而非數值實際型別的概念，類似於動態型別語言中<em>鴨子型別（duck typing）</em> 的概念。如果它走起來像隻鴨子、叫起來像隻鴨子，那它必定是隻鴨子！在範例 17-5 中 <code>Screen</code> 的 <code>run</code> 實作不需要知道每個元件的實際型別爲何。它不會檢查一個元件是 <code>Button</code> 還是 <code>SelectBox</code> 實例，它只會呼叫元件的 <code>draw</code> 方法。透過指定 <code>Box&lt;dyn Draw&gt;</code> 來作爲 <code>components</code>向量中的數值型別，我們定義 <code>Screen</code> 需要我們能夠呼叫 <code>draw</code> 方法的數值。</p>
 <p>我們使用特徵物件與 Rust 型別系統能寫出類似鴨子型別的程式碼，這樣的優勢在於我們在執行時永遠不必檢查一個數值有沒有實作特定方法，或擔心我們會不會呼叫了一個沒有實作該方法的數值而產生錯誤。如果數值沒有實作特徵物件要求的特徵的話，Rust 不會編譯通過我們的程式碼。</p>
 <p>舉例來說，範例 17-10 展示了要是我們嘗試使用 <code>String</code> 作爲元件來建立 <code>Screen</code> 的話會發生什麼事：</p>
 <p><span class="filename">檔案名稱：src/main.rs</span></p>
@@ -15117,14 +15117,14 @@ To learn more, run the command again with --verbose.
 <p>此錯誤讓我們知道要麼我們傳遞了不希望傳給 <code>Screen</code> 的型別所以應該要傳遞其他型別，要麼我們應該要對 <code>String</code> 實作 <code>Draw</code>，這樣 <code>Screen</code> 才能對其呼叫 <code>draw</code>。</p>
 <h3><a class="header" href="#特徵物件執行動態調度" id="特徵物件執行動態調度">特徵物件執行動態調度</a></h3>
 <p>回想一下第十章的<a href="ch10-01-syntax.html#%E4%BD%BF%E7%94%A8%E6%B3%9B%E5%9E%8B%E7%9A%84%E7%A8%8B%E5%BC%8F%E7%A2%BC%E6%95%88%E8%83%BD">「使用泛型的程式碼效能」</a><!-- ignore -->段落我們討論過，當我們對泛型使用閉包時，編譯器會執行單態化（monomorphization）的過程。編譯器會在我們對每個用泛型型別參數取代的實際型別產生非泛型的函式與方法實作。單態化產生程式碼的動作會稱爲「靜態調度（static dispatch）」，這代表編譯器在編譯時知道我們呼叫的方法爲何。與其相反的則是<em>動態調度（dynamic dispatch）</em>，這種方式時編譯器在編譯時無法知道你呼叫的方法爲何。在動態調度的情況下，編譯器會生成在執行時能夠確定會呼叫何種方法的程式碼。</p>
-<p>當我們使用特徵物件時，Rust 必須使用動態調度。編譯器無法知道使用特徵物件的程式碼會使用到的所有型別爲何，所以它會不知道該呼叫哪個型別的哪個實作方法。取而代之的是，Rust 在執行時會使用特徵物件內部的指標來知道該呼叫哪個方法。這樣尋找的動作會產生靜待調度所沒有的執行時開銷。動態調度也讓編譯器無法選擇內聯（inline）方法的程式碼，這樣會因而阻止一些優化。不過我們的確對範例 17-5 的程式碼增加了額外的彈性，並能夠支援範例 17-9，所以這是個權衡取捨。</p>
+<p>當我們使用特徵物件時，Rust 必須使用動態調度。編譯器無法知道使用特徵物件的程式碼會使用到的所有型別爲何，所以它會不知道該呼叫哪個型別的哪個實作方法。取而代之的是，Rust 在執行時會使用特徵物件內部的指標來知道該呼叫哪個方法。這樣尋找的動作會產生靜態調度所沒有的執行時開銷。動態調度也讓編譯器無法選擇內聯（inline）方法的程式碼，這樣會因而阻止一些優化。不過我們的確對範例 17-5 的程式碼增加了額外的彈性，並能夠支援範例 17-9，所以這是個權衡取捨。</p>
 <h3><a class="header" href="#特徵物件要求物件安全" id="特徵物件要求物件安全">特徵物件要求物件安全</a></h3>
-<p>特徵物件只能使用*物件安全（object-safe）*的特徵。Rust 會有一些複雜的規則來檢測其屬性以確保特徵物件安全，不過實際上，我們只需要在意兩條規則。如果特徵定義的所有方法撙守以下屬性的話，該特徵就是物件安全的：</p>
+<p>特徵物件只能使用<em>物件安全（object-safe）</em> 的特徵。Rust 會有一些複雜的規則來檢測其屬性以確保特徵物件安全，不過實際上，我們只需要在意兩條規則。如果特徵定義的所有方法遵守以下屬性的話，該特徵就是物件安全的：</p>
 <ul>
 <li>回傳值不是 <code>Self</code>。</li>
 <li>沒有泛型型別參數。</li>
 </ul>
-<p><code>Self</code> 關鍵字是我們所實作特徵或方法的型別的別名。特徵物件必須是物件安全的，因爲一旦你使用特徵物件後，Rust 就無法知道實作該特徵的型別爲何。如果特徵方法回傳實際 <code>Self</code> 型別，但特徵物件忘記 <code>Self</code> 的確切型別的話，, 該方法不可能有辦法使用原本的實際型別。同理對於泛型型別參數來說，當特徵被使用到時，其就會填入實際的型別參數，實際型別變成了實作特徵的型別的一部分。當型別被使用的特徵物件遺忘時，就無從得知該填素何種泛型型別參數。</p>
+<p><code>Self</code> 關鍵字是我們所實作特徵或方法的型別的別名。特徵物件必須是物件安全的，因爲一旦你使用特徵物件後，Rust 就無法知道實作該特徵的型別爲何。如果特徵方法回傳實際 <code>Self</code> 型別，但特徵物件忘記 <code>Self</code> 的確切型別的話，該方法不可能有辦法使用原本的實際型別。同理對於泛型型別參數來說，當特徵被使用到時，其就會填入實際的型別參數，實際型別變成了實作特徵的型別的一部分。當型別被使用的特徵物件遺忘時，就無從得知該填素何種泛型型別參數。</p>
 <p>標準函式庫中其中一個不是物件安全的特徵範例是 <code>Clone</code> 特徵。<code>Clone</code> 特徵中的 <code>clone</code> 方法簽名長得像這樣：</p>
 <pre><pre class="playground"><code class="language-rust">
 <span class="boring">#![allow(unused)]
@@ -15167,7 +15167,7 @@ To learn more, run the command again with --verbose.
 </ul>
 </blockquote>
 <h2><a class="header" href="#實作物件導向設計模式" id="實作物件導向設計模式">實作物件導向設計模式</a></h2>
-<p>*狀態模式（state pattern）<em>是種物件導向設計模式。此模式的關鍵在於一個數值會有些內部狀態，會以</em>狀態物件（state objects）*呈現，然後數值的行爲會依據內部狀態而有所改變。狀態物件會分享功能，當然在 Rust 中我們使用結構體與特徵，而不是使用物件與繼承。每個狀態物件負責本身的行爲並監測何時要改變成其他狀態。持有狀態物件的數值不會知道狀態中不同的行爲，或是何時要轉換狀態。</p>
+<p><em>狀態模式（state pattern）</em> 是種物件導向設計模式。此模式的關鍵在於一個數值會有些內部狀態，會以<em>狀態物件（state objects）</em> 呈現，然後數值的行爲會依據內部狀態而有所改變。狀態物件會分享功能，當然在 Rust 中我們使用結構體與特徵，而不是使用物件與繼承。每個狀態物件負責本身的行爲並監測何時要改變成其他狀態。持有狀態物件的數值不會知道狀態中不同的行爲，或是何時要轉換狀態。</p>
 <p>使用狀態模式表示當我們程式的業務需求改變時，我們不需要改變持有狀態的數值或使用其數值的程式碼。我們只需要變更其中一個狀態物件的程式碼來改變其規則，或者新增更多狀態物件。讓我們看看狀態設計模式的範例，以及如何在 Rust 中使用。</p>
 <p>我們會漸進式地實作一個網誌文章工作流程。網誌最終的功能會長得像這樣：</p>
 <ol>
@@ -15184,14 +15184,14 @@ To learn more, run the command again with --verbose.
 fn main() {
     let mut post = Post::new();
 
-    post.add_text(&quot;I ate a salad for lunch today&quot;);
+    post.add_text(&quot;我今天午餐吃了沙拉&quot;);
     assert_eq!(&quot;&quot;, post.content());
 
     post.request_review();
     assert_eq!(&quot;&quot;, post.content());
 
     post.approve();
-    assert_eq!(&quot;I ate a salad for lunch today&quot;, post.content());
+    assert_eq!(&quot;我今天午餐吃了沙拉&quot;, post.content());
 }
 </code></pre>
 <p><span class="caption">範例 17-11：展示我們所希望的 <code>blog</code> crate 預期行爲的程式碼</span></p>
@@ -15650,14 +15650,14 @@ impl State for Published {
 </span>fn main() {
     let mut post = Post::new();
 
-    post.add_text(&quot;I ate a salad for lunch today&quot;);
+    post.add_text(&quot;我今天午餐吃了沙拉&quot;);
     assert_eq!(&quot;&quot;, post.content());
 <span class="boring">
 </span><span class="boring">    post.request_review();
 </span><span class="boring">    assert_eq!(&quot;&quot;, post.content());
 </span><span class="boring">
 </span><span class="boring">    post.approve();
-</span><span class="boring">    assert_eq!(&quot;I ate a salad for lunch today&quot;, post.content());
+</span><span class="boring">    assert_eq!(&quot;我今天午餐吃了沙拉&quot;, post.content());
 </span>}
 </code></pre>
 <p>我們仍使用 <code>Post::new</code> 來建立新文章的草稿狀態以及能對文章內容新增文字的能力。但不同於在文章草稿的 <code>content</code> 方法中回傳空字串，我們這次選擇文章草稿不會實作 <code>content</code> 方法。這樣如果我們嘗試取得文章草稿內容時，我們會得到編譯錯誤告訴我們該方法不存在。如此一來，我們就不可能在生產環境意外顯示出文章草稿內容了，因爲程式碼根本不會編譯過。範例 17-19 顯示了 <code>Post</code> 結構體與 <code>DraftPost</code> 結構體的定義，以及它們個別的方法：</p>
@@ -15757,13 +15757,13 @@ impl PendingReviewPost {
 fn main() {
     let mut post = Post::new();
 
-    post.add_text(&quot;I ate a salad for lunch today&quot;);
+    post.add_text(&quot;我今天午餐吃了沙拉&quot;);
 
     let post = post.request_review();
 
     let post = post.approve();
 
-    assert_eq!(&quot;I ate a salad for lunch today&quot;, post.content());
+    assert_eq!(&quot;我今天午餐吃了沙拉&quot;, post.content());
 }
 </code></pre>
 <p><span class="caption">範例 17-21：修改 <code>main</code> 來使用新的網誌文章工作流程實作</span></p>
@@ -15771,7 +15771,7 @@ fn main() {
 <p>你可以試試看在範例 17-20 之後，對 <code>blog</code> crate 實作我們在此段落稍早提及的額外需求任務建議，來看看你覺得此版本的程式碼設計如何。注意有些任務很可能在此設計就已經實作完成了。</p>
 <p>我們看到儘管 Rust 能夠實作物件導向設計模式、其他像是將狀態寫入型別系統中的模式在 Rust 中也是可行的。這些模式有不同的取捨。雖然你可能非常熟悉物件導向模式，但重新思考問題，並善用 Rust 的特色可以帶來不少優勢，像是在執行時就避免錯誤發生。物件導向模式在 Rust 中不會永遠是最好的解決方案，因爲 Rust 有像是所有權這樣物件導向語言所沒有的特定功能。</p>
 <h2><a class="header" href="#總結-15" id="總結-15">總結</a></h2>
-<p>無論你讀完此章後，認爲 Rust 是否屬於物件導向語言，你知道在 Rust 中你可以使用特徵物件來取得一些物件導向的特色。動態分配能給予你的程式碼更多的彈性，但會犧牲一點執行時效能。你可以使用此彈性來實作物件導向模式，幫助提升程式碼可維護性。Rust 還有其他像是所有權等物件導向語言所沒有的功能。物件導向模式不會永遠是善用 Rust 潛能的最佳方案，不過仍是個不錯的選項。</p>
+<p>無論你讀完此章後，認爲 Rust 是否屬於物件導向語言，你都知道在 Rust 中你可以使用特徵物件來取得一些物件導向的特色。動態分配能給予你的程式碼更多的彈性，但會犧牲一點執行時效能。你可以使用此彈性來實作物件導向模式，幫助提升程式碼可維護性。Rust 還有其他像是所有權等物件導向語言所沒有的功能。物件導向模式不會永遠是善用 Rust 潛能的最佳方案，不過仍是個不錯的選項。</p>
 <p>接下來，我們要看看模式（patterns），這是 Rust 另一個可以提供大量彈性的功能。我們在書中一路下來簡單看過它們好幾次了，不過我們還沒見識到它們全部的本事。讓我們來探索吧！</p>
 <blockquote>
 <ul>
