deploy: 5e39778b4c128c4cf3e4b98934173fd2e07c8680

--- a/ch06-02-match.html
+++ b/ch06-02-match.html
@@ -370,7 +370,7 @@ To learn more, run the command again with --verbose.
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>    let some_u8_value = 0u8;
     match some_u8_value {
-        1 =&gt; println!(&quot;one&quot;),
+        1 =&gt; println!(&quot;一&quot;),
         3 =&gt; println!(&quot;三&quot;),
         5 =&gt; println!(&quot;five&quot;),
         7 =&gt; println!(&quot;seven&quot;),
